[gd_scene load_steps=13 format=3 uid="uid://fdtkndaa0lce"]

[ext_resource type="Script" path="res://Scenes/Levels/TitleScreen/TitleScreenUI.gd" id="1_st8au"]
[ext_resource type="PackedScene" uid="uid://cbgoqx8kcalop" path="res://Scenes/Levels/TutorialLevel/tutorial.tscn" id="2_e7c4p"]
[ext_resource type="Material" uid="uid://dphpmxni7m8ge" path="res://Assets/Materials/TitleScreenMaterial.tres" id="3_4yce8"]
[ext_resource type="LabelSettings" uid="uid://2pp6iweqnvh" path="res://UI_Theme/TitleScreenText.tres" id="4_qcs3o"]
[ext_resource type="PackedScene" uid="uid://bfr6itpdlgpsr" path="res://Scenes/UI_Elements/pause_buttons.tscn" id="5_lxaax"]
[ext_resource type="PackedScene" uid="uid://dwemeqesk48kw" path="res://Scenes/UI_Elements/settings_main_menu.tscn" id="7_u4ssm"]

[sub_resource type="Animation" id="Animation_r8eg7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BottomWobble:material:shader_parameter/progress")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.25]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemsContainer:anchor_top")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0.1),
"update": 0,
"values": [0.85]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ItemsContainer:anchor_bottom")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0.1),
"update": 0,
"values": [1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Fade:color")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.490196, 0.439216, 0.741176, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TitleText:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ItemsContainer:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jjext"]
resource_name = "StartGame"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BottomWobble:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 5),
"update": 0,
"values": [0.25, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TitleText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ItemsContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_5451p"]
resource_name = "quit"

[sub_resource type="Animation" id="Animation_ryw3f"]
resource_name = "settings_in"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SettingsSubMenu")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"show_settings"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottomWobble:material:shader_parameter/progress")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 5),
"update": 0,
"values": [0.25, 2.08165e-12]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ItemsContainer:anchor_top")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 0.1),
"update": 0,
"values": [0.85, 1.1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Fade:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 5),
"update": 0,
"values": [Color(0.490196, 0.439216, 0.741176, 0), Color(0.490196, 0.439216, 0.741176, 1)]
}

[sub_resource type="Animation" id="Animation_k2hrg"]
resource_name = "settings_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemsContainer:anchor_top")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 0.1),
"update": 0,
"values": [1.1, 0.85]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemsContainer:anchor_bottom")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 0.1),
"update": 0,
"values": [1.1, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomWobble:material:shader_parameter/progress")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 5),
"update": 0,
"values": [2.08165e-12, 0.25]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Fade:color")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 5),
"update": 0,
"values": [Color(0.490196, 0.439216, 0.741176, 1), Color(0.490196, 0.439216, 0.741176, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_geoll"]
_data = {
"RESET": SubResource("Animation_r8eg7"),
"StartGame": SubResource("Animation_jjext"),
"quit": SubResource("Animation_5451p"),
"settings_in": SubResource("Animation_ryw3f"),
"settings_out": SubResource("Animation_k2hrg")
}

[node name="TitleScreenUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_st8au")
start_level = ExtResource("2_e7c4p")

[node name="Fade" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.490196, 0.439216, 0.741176, 0)

[node name="BottomWobble" type="ColorRect" parent="."]
material = ExtResource("3_4yce8")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.235294, 0.2, 0.501961, 1)

[node name="TitleText" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.25
grow_horizontal = 2
text = "FireFly"
label_settings = ExtResource("4_qcs3o")

[node name="ItemsContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.85
anchor_right = 0.9
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="Start" parent="ItemsContainer" instance=ExtResource("5_lxaax")]
layout_mode = 2
size_flags_horizontal = 3
text = "Start"

[node name="Settings" parent="ItemsContainer" instance=ExtResource("5_lxaax")]
layout_mode = 2
size_flags_horizontal = 3
text = "Settings"

[node name="Quit" parent="ItemsContainer" instance=ExtResource("5_lxaax")]
layout_mode = 2
size_flags_horizontal = 3
text = "Quit"

[node name="SettingsSubMenu" parent="." instance=ExtResource("7_u4ssm")]
visible = false
z_index = 0
layout_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_geoll")
}
speed_scale = 2.0

[connection signal="pressed" from="ItemsContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="ItemsContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="ItemsContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="settings_closed" from="SettingsSubMenu" to="." method="_on_settings_sub_menu_settings_closed"]
